<resources>
    <string name="app_name">RepairOrder</string>
    <string name="header">Repair Order</string>
    <string name="subheader">Enter details below</string>

    <string name="name_label">Name!!!</string>
    <string name="order_type">Order Type</string>
    <string name="technician">Technician</string>
    <string name="inspector">Inspector</string>
    <string name="paint">Paint</string>
    <string name="parts">Parts</string>
    <string name="labor">Labor</string>


    <string name="subtotal">Subtotal</string>
    <string name="subtotalPrice">$0.0</string>
    <string name="taxPrice">$0.0</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="totalP">$0.0</string>
    <string name="submit">SUBMIT</string>

    <string-array name="order_type_categories">
        <item>Select order type:</item>
        <item>Repair></item>
        <item>Maintenance</item>
        <item>Installation</item>
        <item>Diagnostics</item>
        <item>Other</item>
    </string-array>
</resources>