<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepairOrderActivity"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="120dp"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="#2B2D30"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subheader"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/orderType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/order_type"
        android:textSize="18sp"
        android:labelFor="@id/orderTypeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subheader" />

    <Spinner
        android:id="@+id/orderTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/order_type_categories"
        app:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/guideInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/orderType"/>

    <TextView
        android:id="@+id/technician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/technician"
        android:textSize="18sp"
        android:labelFor="@id/technicianInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderType" />

    <EditText
        android:id="@+id/technicianInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:importantForAutofill="yes"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/guideInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/technician"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/inspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/inspector"
        android:textSize="18sp"
        android:labelFor="@id/inspectorInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/technician" />

    <EditText
        android:id="@+id/inspectorInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:importantForAutofill="yes"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/guideInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/inspector"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/paint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/paint"
        android:textSize="18sp"
        android:labelFor="@id/paintInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inspector"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/paintInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:importantForAutofill="yes"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/guideInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/paint"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/parts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/parts"
        android:textSize="18sp"
        android:labelFor="@id/partsInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paint" />

    <EditText
        android:id="@+id/partsInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:importantForAutofill="yes"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/guideInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/parts"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/labor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/labor"
        android:textSize="18sp"
        android:labelFor="@id/laborInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parts"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/laborInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:importantForAutofill="yes"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/guideInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/labor"
        android:layout_marginEnd="16dp"/>

<!--    <EditText-->
<!--        android:id="@+id/orderInput"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="124dp"-->
<!--        android:layout_marginTop="104dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:textAlignment="viewStart"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.521"-->
<!--        app:layout_constraintStart_toStartOf="@id/orderType"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/subtotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="120dp"
        android:text="@string/subtotalPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/taxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:text="@string/taxPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtotalPrice" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/totalP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxPrice" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="120dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/subtotalPrice" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="70dp"
        android:text="@string/tax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/subtotalPrice"
        app:layout_constraintTop_toBottomOf="@id/subtotal" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="20dp"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tax" />

</androidx.constraintlayout.widget.ConstraintLayout>